log
Fri Apr  8 11:44:02 HSP 2022: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
hashmap.c:60:14: error: statement with no effect [-Werror=unused-value]
     nuevoMapa->buckets;
     ~~~~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3c020e0
Fri Apr  8 11:44:48 HSP 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
e9f232f
Fri Apr  8 11:45:20 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
13e04e4
Fri Apr  8 11:46:08 HSP 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
test.c: In function 'createMap':
hashmap.c:59:28: error: 'nuevoMapa' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         nuevoMapa->buckets = NULL;
                            ^
cc1.exe: all warnings being treated as errors
Compilation failed
564f336
Fri Apr  8 11:46:32 HSP 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
2382a7b
Fri Apr  8 11:55:27 HSP 2022: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
1a4fc85
Fri Apr  8 11:56:44 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5083184
Fri Apr  8 11:58:04 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d2bcc30
Fri Apr  8 12:00:43 HSP 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
c99241b
Fri Apr  8 12:01:29 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3147232
Fri Apr  8 12:02:30 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0d5c44b
Fri Apr  8 12:02:49 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:72:5: error: expected ';' before 'if'
     if(capacity == 0)
     ^~
Compilation failed
ea3ab11
Fri Apr  8 12:02:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9176fa
Fri Apr  8 12:04:25 HSP 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
e96221b
Fri Apr  8 12:05:23 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b4865c3
Fri Apr  8 12:06:56 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75cf9d6
Fri Apr  8 12:12:00 HSP 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
1ce38c4
Fri Apr  8 12:15:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b29839b
Fri Apr  8 17:34:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
71309ac
Fri Apr  8 17:35:10 HSP 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
830e4ea
Fri Apr  8 17:37:37 HSP 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
7bdd8d4
Fri Apr  8 17:46:30 HSP 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b360ade
Fri Apr  8 17:48:20 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8a9851a
Fri Apr  8 17:50:30 HSP 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
bc57529
Fri Apr  8 17:59:29 HSP 2022: 
 hashmap.c | 52 +++++++++++++++++++++++-----------------------------
 1 file changed, 23 insertions(+), 29 deletions(-)
 tests:  3|5
total_score: 20/70
ce0005d
Fri Apr  8 18:00:35 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
adcbdc7
Fri Apr  8 18:03:00 HSP 2022: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
5d74d6e
Fri Apr  8 18:06:00 HSP 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|4
total_score: 30/70
a544ed7
Fri Apr  8 18:13:05 HSP 2022: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
3348bc0
Sat Apr  9 21:17:26 HSP 2022: 
 hashmap.c | 37 +++----------------------------------
 1 file changed, 3 insertions(+), 34 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:10: error: unused variable 'k' [-Werror=unused-variable]
     long k = valorHash + 1;
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
bcb77a6
Sat Apr  9 21:17:34 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7d58632
Sat Apr  9 21:19:21 HSP 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
19c072d
Sat Apr  9 21:19:40 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7279ff0
Sat Apr  9 21:20:51 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
0b95594
Sat Apr  9 21:22:25 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
fcff9b4
Sat Apr  9 21:24:12 HSP 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
da87458
